# bench-show

./: .gitignore  .packcheck.ignore  .travis.yml  Changelog.md  LICENSE  README.md  TODO.md  appveyor.yml  bench-graph.cabal  bench-show.cabal  flake.nix  sources.nix  stack-8.0.yaml  stack-8.2.yaml  stack.yaml
.github/workflows/: packcheck.yml
app/: Main.hs
exe/: Main.hs
lib/: BenchGraph.hs  BenchShow.hs  Chart.hs
lib/BenchGraph/: Analysis.hs  Common.hs  Graph.hs  Report.hs  Tutorial.hs
lib/BenchShow/: Analysis.hs  Common.hs  Graph.hs  Report.hs  Tutorial.hs
lib/BenchShow/Internal/: Analysis.hs  Common.hs  Graph.hs  Pretty.hs  Report.hs
test/: Doc.hs  Main.hs  results-doc-multi.csv  results-doc.csv  results.csvraw
