name:               bench-graph
version:            0.1.0
synopsis:           Plot benchmarks and compare them
description:
  Plot benchmarks and compare them
  See the README for comprehensive documentation.

homepage:            https://github.com/harendra-kumar/bench-compare
bug-reports:         https://github.com/harendra-kumar/bench-compare/issues
license:             BSD3
license-file:        LICENSE
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.1
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2017 Harendra Kumar
category:            Testing, CI
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    Changelog.md
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/harendra-kumar/bench-graph

library
    hs-source-dirs:   lib
    exposed-modules:  BenchGraph
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        RecordWildCards
    ghc-options: -Wall
    build-depends:
          base              >= 4.8     && < 5
        , bytestring        >= 0.9     && < 0.11
        , Chart             >= 1.6     && < 1.9
        , Chart-diagrams    >= 1.6     && < 1.9
        , csv               >= 0.1     && < 0.2
        , directory         >= 1.2     && < 1.4
        , transformers      >= 0.4     && < 0.6

executable bgraph
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        RecordWildCards
    hs-source-dirs: exe
    main-is: Main.hs
    ghc-options: -Wall

    build-depends:
          base              >= 4.8 && < 5
        , bench-graph
        , split             >= 0.2     && < 0.3
        , text              >= 1.1.1   && < 1.3
        , typed-process     >= 0.1.0.0 && < 0.3
